--- a/TextCopierApp/TextCopier/MainWindow.xaml
+++ b/TextCopierApp/TextCopier/MainWindow.xaml
@@ -7,6 +7,14 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
+        <DataGrid x:Name="textItemsDataGrid" Grid.Row="0" Grid.Column="0">
+        </DataGrid>
     </Grid>
 </Window>
